2009-06-09 Alexander Malysh <amalysh at kannel.org>
     * gw/ota_compiler.c: revert of re-order INLINE attributs in oma_ota_attributes
       because code assume VALUE INLINE to be last in table.
       Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.

2008-10-22  Stipe Tolj  <stolj at kannel.org>
        * gw/ota_compiler.c: re-order INLINE attributs in oma_ota_attributes struct
          to fit the order in the spec tables. NLC.

2009-06-04  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: add the SMPP username as msg->sms.account value, so
      we can use it in the urltrans layer with escape code '%o'. This makes
      the semantics for MT/MO direction similar.
      
2009-05-25  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: fixing bug 'document type does not allow element 
      "PARA" here; missing one of "FOOTNOTE", "MSGTEXT", "CAUTION", "IMPORTANT", 
      "NOTE", "TIP", "WARNING", "BLOCKQUOTE", "INFORMALEXAMPLE" start-tag'.
    
2009-05-20 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: some SMSCs have submit/done date with seconds. Now we
      can parse it sscanf way.

2009-05-20 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_smpp.c, gw/smsbox.c, gw/dlr.h:
      added support for intermediate notification.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.

2009-05-20 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: adding clarification that user can provide own
      message id's to the dlr-url.
      Thanks to "Arne K. Haaje" <arne at drlinux.no> for this patch.
 
2009-05-20 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed PANIC when we try to send empty message body.

2009-05-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool_oracle.c: fixed compiler warnings.

2009-05-06 Alexander Malysh <amalysh at kannel.org>